--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     // 스테토
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'com.facebook.stetho:stetho-js-rhino:1.5.1'
+
+    // 글라이드
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
