--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,15 @@ buildscript {
         google()
         jcenter()
     }
+
+    ext.hilt_version = '2.33-beta'
+
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
